feat: Complete Appmax integration with Edge Functions and documentation

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,13 @@
-VITE_SUPABASE_URL=your_supabase_project_url
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+# Supabase Configuration
+# Get these values from: https://app.supabase.com/project/YOUR_PROJECT/settings/api
+
+VITE_SUPABASE_URL=your_supabase_url_here
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+
+# Gateway API Configuration
+# Add your payment gateway API credentials here
+VITE_GATEWAY_API_KEY=your_gateway_api_key_here
+VITE_GATEWAY_API_SECRET=your_gateway_api_secret_here
+
+# Optional: Proxy Configuration
+# VITE_PROXY_URL=your_proxy_url_here
