--- a/vercel.json
+++ b/vercel.json
@@ -38,7 +38,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "frame-ancestors 'self' https://*.vercel.app https://*.vercel.live https://vercel.live; default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://vercel.live https://*.vercel.live https://*.vercel.app; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com data:; img-src 'self' data: https: blob:; connect-src 'self' https://*.supabase.co https://*.railway.app wss://*.supabase.co https://vercel.live https://*.vercel.live; frame-src 'self' https://vercel.live https://*.vercel.live;"
+          "value": "frame-ancestors 'self' https://*.vercel.app https://*.vercel.live https://vercel.live; default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://vercel.live https://*.vercel.live https://*.vercel.app https://js.stripe.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com data:; img-src 'self' data: https: blob:; connect-src 'self' https://*.supabase.co https://*.railway.app wss://*.supabase.co https://vercel.live https://*.vercel.live https://api.stripe.com; frame-src 'self' https://vercel.live https://*.vercel.live https://js.stripe.com;"
         }
       ]
     }
